--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -1795,6 +1795,25 @@
 	min-height: 120px;
 }
 
+.wpss-requirement-field select {
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	height: 46px;
+	line-height: 1.5;
+	padding-right: 40px;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%236b7280' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+	background-position: right 12px center;
+	background-size: 16px;
+	background-color: #fff;
+	cursor: pointer;
+}
+
+.wpss-requirement-field select::-ms-expand {
+	display: none;
+}
+
 .wpss-field-hint,
 .wpss-field-description {
 	margin: 8px 0 0;
@@ -2270,6 +2289,28 @@ body.wpss-modal-active {
 .wpss-form-group__textarea {
 	resize: vertical;
 	min-height: 100px;
+}
+
+/* Select Dropdowns - Proper Height */
+.wpss-form-group__select,
+.wpss-form-group select {
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	height: 46px;
+	line-height: 1.5;
+	padding-right: 40px;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%236b7280' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+	background-position: right 12px center;
+	background-size: 16px;
+	background-color: #fff;
+	cursor: pointer;
+}
+
+.wpss-form-group__select::-ms-expand,
+.wpss-form-group select::-ms-expand {
+	display: none;
 }
 
 .wpss-form-group__hint {
