--- a/assets/css/vendor-dashboard.css
+++ b/assets/css/vendor-dashboard.css
@@ -657,6 +657,27 @@
 	min-height: 100px;
 }
 
+.wpss-select,
+select.wpss-input {
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	height: 44px;
+	line-height: 1.5;
+	padding-right: 40px;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%236b7280' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+	background-position: right 12px center;
+	background-size: 16px;
+	background-color: #fff;
+	cursor: pointer;
+}
+
+.wpss-select::-ms-expand,
+select.wpss-input::-ms-expand {
+	display: none;
+}
+
 .wpss-form-hint {
 	margin-top: 0.375rem;
 	font-size: 0.8125rem;
